--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
@@ -13,7 +14,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vuex": "^4.0.0-rc.2"
+    "vuex": "^4.0.0-rc.2",
+    "execa": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
