--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "bingo",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
@@ -14,8 +13,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vuex": "^4.0.0-rc.2",
-    "execa": "latest"
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
