--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ pnpm-debug.log*
 
 #Electron-builder output
 /dist_electron
+# Cordova
+/src-cordova/platforms
+/src-cordova/plugins
+/public/cordova.js
